[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-spring-petclinic</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
     <name>sfg-spring-petclinic</name>
     <description>sfg-spring-petclinic</description>
     <properties>
@@ -53,6 +53,6 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:nemanja79/sfg-spring-petclinic.git</developerConnection>
-        <tag>sfg-spring-petclinic-0.0.3</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
